# aisentinel

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  Procfile  README.md  cursor.md  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml  requirements.txt
.github/: TOPICS.md
.github/workflows/: .gitkeep  ci.yml
.mplconfig/: fontlist-v390.json
.streamlit/: config.toml
data/: .gitkeep
data/processed/: sentiment.csv
docs/: API_SETUP.md  CODEBASE_AUDIT.md  FRONTEND_FEATURES.md  FRONTEND_REVIEW.md  ML_PIPELINE.md  index.md
models/: .gitkeep
notebooks/: model_evaluation.ipynb
requirements/: base.txt  dev.txt
scripts/: collect_twitter.py  generate_sample_data.py  test_artificialanalysis.py  test_model.py  test_twitter.py  train_sentiment_model.py
src/: __init__.py
src/dashboard/: __init__.py  app.py
src/data_collection/: __init__.py  artificialanalysis_client.py  hackernews_collector.py  prepare_training_data.py  reddit_collector.py  twitter_collector.py
src/data_collection/sources/: __init__.py  discord.py  github.py  producthunt.py  reddit.py  twitter.py
src/ml/: __init__.py  model.py  train_model.py
src/sentiment_analysis/: __init__.py  analyzer.py
src/sentiment_analysis/models/: __init__.py  transformers_model.py
src/utils/: __init__.py  config.py  logo_service.py  taxonomy.py
tests/: __init__.py  test_collectors_smoke.py  test_config.py  test_dashboard_smoke.py  test_sentiment.py  test_taxonomy.py
